--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                             <a href="tel:+78007003030" class="header-contacts__phone">8 800 700 30 30</a>
                             <div class="header-dropdown">
                                 <div class="header-contacts__info">График работы</div>
-                                <div class="header-dropdown__triangle"></div>
+                                <div class="header-dropdown__triangle">
+                                    <div class="header-dropdown__triangle-elem"></div>
+                                </div>
                                 <div class="header-dropdown__menu">
                                     <ul class="header-dropdown__list">
                                         <li class="header-dropdown__item">пн-вс: 09:00 - 20:00</li>
